Added gradle-linter